--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
     "axios": "^1.7.7",
+    "gzappy-js": "^0.0.18",
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
