--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^3.9.1",
     "axios": "^1.7.7",
     "gzappy-js": "^0.0.18",
+    "motion": "^11.11.15",
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
