--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
+    "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
     "gzappy-js": "^0.0.18",
     "motion": "^11.11.15",
@@ -18,6 +19,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.53.1",
     "react-icons": "^5.3.0",
+    "react-redux": "^9.1.2",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
     "zod": "^3.23.8"
